--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    types:
-      - opened
+    types: [opened, reopened, synchronize, labeled]
   issue_comment:
     types: [created]
   workflow_dispatch:
