--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,4 +14,4 @@ jobs:
 
     steps:
       - name: Output event data
-        run: echo "${{ toJSON(github.event) }}"
+        run: echo "${{ toJSON(github.event.head_commit.message) }}"
